navbar collapse home tab issue fixed

--- a/css/fav.css
+++ b/css/fav.css
@@ -2,3 +2,7 @@
     top: 55px;
     width: 200px;
 }
+
+#removeFavoritesBtn {
+    display: block;
+}
